# tree-sitter-y86

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-y86.h  tree-sitter-y86.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_y86/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterY86Tests/: TreeSitterY86Tests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.test  instr_and_reg.test  labels_directives.test
