[package]
name = "tree-sitter-y86"
description = "parser for y86 assembly language"
version = "0.1.0"
authors = ["Macsen Casaus <macsencasaus@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "y86"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/macsencasaus/tree-sitter-y86"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
